--- a/sass/_smallScreenDefault.scss
+++ b/sass/_smallScreenDefault.scss
@@ -39,7 +39,8 @@ main {
     position: relative;
     border-left: 4px solid $secondary;
     border-right: 2px solid $secondary;
-    box-shadow: 0px 2px 5px 2px #ccc;
+    -webkit-box-shadow: 0px 2px 5px 2px #ccc;
+            box-shadow: 0px 2px 5px 2px #ccc;
     border-radius: 15px 0 0 15px;
 
     &::before {
@@ -75,9 +76,15 @@ main {
 /* Styles Accueil Origine
 -------------------------------------- */
 .headerOrigine {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;    
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;    
 }
 
 .silhouetteSwap {
@@ -120,7 +127,9 @@ main {
 /* Styles Eleves formations
 ----------------------------- */
 .formationEleves {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
     &:first-child {        
         margin-top: 60px;
@@ -153,10 +162,17 @@ main {
             background-image: url("../assets/imgtextures/raie_bleu_horizontale.jpg");
             background-size: cover;
             background-repeat: no-repeat;
-            box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
+            -webkit-box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
+                    box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
             &:hover { opacity: 0.5;}
 
             p {
@@ -256,7 +272,9 @@ main {
 --------------------*/
 
 .formationPros {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
     &:first-child {        
         margin-top: 60px;
@@ -290,10 +308,17 @@ main {
             background-position: 40%;
             background-size: cover;
             background-repeat: no-repeat;
-            box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
+            -webkit-box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
+                    box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
             &:hover { opacity: 0.5;}
 
             p {
@@ -407,7 +432,9 @@ main {
 --------------------*/
 
 .modeles {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
     &:first-child {        
         margin-top: 60px;
@@ -501,10 +528,17 @@ main {
             background-repeat: no-repeat;
             border: 1px solid $softBlack;
             border-radius: 9px 9px 50px 50px;
-            box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
+            -webkit-box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
+                    box-shadow: 0px 3px 5px 2px rgba(46, 46, 46, 0.3);
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
 
             &:hover { opacity: 0.8;}
 
@@ -563,48 +597,54 @@ main {
 //     display: none;
 // }
 
-.g-recaptcha {
+#contactForm {
+    .g-recaptcha {
     width: 100%;
-    transform: scale(0.8);
-    transform-origin: 0 0;
-}
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+    -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+    }
 
-.btnEnvoyer {
-    display: block;
-    width: 100%;
-    color: white;
-    font-weight: 600;
-    font-size: 17px;
-    background-color: $primary;
+    .btnEnvoyer {
+        display: block;
+        width: 100%;
+        color: white;
+        font-weight: 600;
+        font-size: 17px;
+        background-color: $primary;
 
-    &:hover {
-        background-color: $primaryActive;
+        &:hover {
+            background-color: $primaryActive;
+        }
+    }
+
+    textarea {
+        max-height: 160px;
+    }
+
+    .success {
+        padding: 1em;
+        margin-bottom: 0.75rem;
+        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+        color: #468847;
+        background-color: #dff0d8;
+        border: 1px solid #d6e9c6;
+        border-radius: 5px;
+    }
+
+    .error {
+        padding: 1em;
+        margin-bottom: 0.75rem;
+        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+        color: #b94a48;
+        background-color: #f2dede;
+        border: 1px solid rgba(185, 74, 72, 0.3);
+        border-radius: 5px;
     }
 }
 
-.success {
-    padding: 1em;
-    margin-bottom: 0.75rem;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-    color: #468847;
-    background-color: #dff0d8;
-    border: 1px solid #d6e9c6;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-}
 
-.error {
-    padding: 1em;
-    margin-bottom: 0.75rem;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-    color: #b94a48;
-    background-color: #f2dede;
-    border: 1px solid rgba(185, 74, 72, 0.3);
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-}
 
 /* Media Queries Small Screen
 ---------------------------- */
