(master) contact form process finished

--- a/sass/_menus+Navigations.scss
+++ b/sass/_menus+Navigations.scss
@@ -3,7 +3,7 @@ Small & Middle Screen Navigation
 ------------------------------- */
 
 /* Left Menu Off Canvas Bar */
-#mobileNav {
+#mobileNav, #mobileIcons {
     position: fixed;
 }
 
