--- a/css/styles.css
+++ b/css/styles.css
@@ -612,7 +612,7 @@ Slick Slider Styles
 }
 .sliderHero .fourth .slider-txt4 {
   margin-top: 12%;
-  left: 45%;
+  left: 40%;
   -webkit-transform: translate(20%, 20%);
   transform: translate(20%, 20%);
 }
@@ -1043,7 +1043,7 @@ Slick Slider Styles
 Small & Middle Screen Navigation
 ------------------------------- */
 /* Left Menu Off Canvas Bar */
-#mobileNav {
+#mobileNav, #mobileIcons {
   position: fixed;
 }
 
@@ -1449,6 +1449,11 @@ Small Screen Styles (from 599px downwards)
 
 /* Styles Généraux
 ---------------------------- */
+body {
+  width: 100%;
+  height: 100%;
+}
+
 .titreH4 {
   font: 600 22px Poppins, sans-serif;
   color: #212529;
@@ -2016,6 +2021,7 @@ main {
   font-weight: 600;
   font-size: 17px;
   background-color: #006fba;
+  opacity: 1;
 }
 #contactForm .btnEnvoyer:hover {
   background-color: #0098fe;
@@ -2040,6 +2046,10 @@ main {
   background-color: #f2dede;
   border: 1px solid rgba(185, 74, 72, 0.3);
   border-radius: 5px;
+}
+#contactForm .help-block.with-errors {
+  color: #ff5050;
+  margin-top: 5px;
 }
 
 /* Media Queries Small Screen
