--- a/css/styles.css
+++ b/css/styles.css
@@ -1055,11 +1055,18 @@ Small & Middle Screen Navigation
 
 .mobileBanner {
   position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   height: 50px;
-  max-width: 1300px;
+  width: 100%;
+  padding: 0 15px;
   background-color: #242424;
   opacity: 0.9;
   color: white;
@@ -1080,16 +1087,11 @@ Small & Middle Screen Navigation
   top: 0;
   height: 100%;
   -webkit-transition: ease 0.3s;
-  -moz-transition: ease 0.3s;
-  -o-transition: ease 0.3s;
   transition: ease 0.3s;
 }
 
 .bodyWrapper.pushed {
   -webkit-transform: translateX(250px);
-  -moz-transform: translateX(250px);
-  -ms-transform: translateX(250px);
-  -o-transform: translateX(250px);
   transform: translateX(250px);
 }
 
@@ -1103,8 +1105,6 @@ Small & Middle Screen Navigation
   bottom: 0;
   left: -250px;
   -webkit-transition: ease 0.3s;
-  -moz-transition: ease 0.3s;
-  -o-transition: ease 0.3s;
   transition: ease 0.3s;
   overflow: hidden;
 }
@@ -1163,9 +1163,6 @@ Small & Middle Screen Navigation
 
 .panel.isOpen, .subPanel.isOpen {
   -webkit-transform: translateX(-250px);
-  -moz-transform: translateX(-250px);
-  -ms-transform: translateX(-250px);
-  -o-transform: translateX(-250px);
   transform: translateX(250px);
 }
 
@@ -1208,8 +1205,6 @@ Small & Middle Screen Navigation
   bottom: 0;
   right: -60px;
   -webkit-transition: ease 0.1s;
-  -moz-transition: ease 0.1s;
-  -o-transition: ease 0.1s;
   transition: ease 0.1s;
   overflow: hidden;
   z-index: 10;
@@ -1218,8 +1213,15 @@ Small & Middle Screen Navigation
 .panelR .shareIcons {
   margin: 0;
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .panelR .shareIcons li {
@@ -1232,17 +1234,22 @@ Small & Middle Screen Navigation
   position: relative;
   top: 7px;
   border-radius: 3px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin-bottom: 6px;
   cursor: pointer;
   -webkit-transition: ease 0.1s;
-  -moz-transition: ease 0.1s;
-  -o-transition: ease 0.1s;
   transition: ease 0.1s;
 }
 .panelR .shareIcons li div:hover {
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 .panelR .shareIcons li div svg {
@@ -1253,35 +1260,25 @@ Small & Middle Screen Navigation
   width: 34px;
   height: 34px;
   -webkit-transition: ease 0.1s;
-  -moz-transition: ease 0.1s;
-  -o-transition: ease 0.1s;
   transition: ease 0.1s;
 }
 .panelR .shareIcons li img:hover {
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 
 .panelR.pushedR {
   -webkit-transform: translateX(-60px);
-  -moz-transform: translateX(-60px);
-  -ms-transform: translateX(-60px);
-  -o-transform: translateX(-60px);
   transform: translateX(-60px);
 }
 
 .panelR.isOpenR {
   -webkit-transform: translateX(-60px);
-  -moz-transform: translateX(-60px);
-  -ms-transform: translateX(-60px);
-  -o-transform: translateX(-60px);
   transform: translateX(-60px);
 }
 
 .bodyWrapper.pushedR {
   -webkit-transform: translateX(-60px);
-  -moz-transform: translateX(-60px);
-  -ms-transform: translateX(-60px);
-  -o-transform: translateX(-60px);
   transform: translateX(-60px);
 }
 
@@ -1289,8 +1286,14 @@ Small & Middle Screen Navigation
 Large Screen Navigation
 ------------------------------- */
 .desktopBanner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   height: 50px;
   max-width: 1300px;
@@ -1298,7 +1301,11 @@ Large Screen Navigation
   color: white;
 }
 .desktopBanner .displayInline {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .desktopBanner .displayInline .logo img {
@@ -1310,11 +1317,10 @@ Large Screen Navigation
   height: 34px;
   margin-left: 7px;
   -webkit-transition: ease 0.1s;
-  -moz-transition: ease 0.1s;
-  -o-transition: ease 0.1s;
   transition: ease 0.1s;
 }
 .desktopBanner .displayInline .socialMediaIcons img:hover {
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 
@@ -1323,14 +1329,23 @@ Large Screen Navigation
   height: 50px;
   max-width: 1300px;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 10000;
 }
 .desktopMenu .mainMenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 .desktopMenu .mainMenu a {
@@ -1341,12 +1356,12 @@ Large Screen Navigation
 }
 @media screen and (min-width: 992px) {
   .desktopMenu .mainMenu a {
-    padding: 13.5px 30.1px;
+    padding: 13.5px 38.6px;
   }
 }
 @media screen and (min-width: 1200px) {
   .desktopMenu .mainMenu a {
-    padding: 13.5px 42.8px;
+    padding: 13.5px 53.5px;
   }
 }
 .desktopMenu .mainMenu a:hover {
@@ -1360,16 +1375,25 @@ Large Screen Navigation
   height: 50px;
   max-width: 1300px;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   border-bottom: 1px solid rgba(178, 178, 178, 0.3);
+  position: -webkit-sticky;
   position: sticky;
   top: 50px;
   z-index: 10000;
   background-color: #F7F7F7;
 }
 .desktopSubMenu .subMenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 .desktopSubMenu .subMenu a {
@@ -1452,6 +1476,7 @@ Small Screen Styles (from 599px downwards)
 body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .titreH4 {
@@ -1966,7 +1991,7 @@ main {
   align-items: center;
 }
 .modeles .blockCenter .blocks-titles:hover {
-  opacity: 0.8;
+  opacity: 0.9;
 }
 .modeles .blockCenter .blocks-titles div {
   display: block;
