--- a/sass/_menus+Navigations.scss
+++ b/sass/_menus+Navigations.scss
@@ -412,6 +412,11 @@ Large Screen Navigation
     background-size: contain;
     margin-top: 1em;
 
+    div {
+        padding: 0;
+        margin: 0;
+    }
+
     .adresse, .renseignements, .designers {
         color: #fff;
         text-align: center;
